2003-03-18  Gary Thomas  <gary@mlbassoc.com>

	* src/sh_scif_serial.c (sh_scif_set_config): 
	Flag for CYG_IO_SET_CONFIG_SERIAL_HW_RX_FLOW_THROTTLE is 32 bits.

2003-02-24  Jonathan Larmour  <jifl@eCosCentric.com>

	* cdl/ser_sh_scif.cdl: Remove irrelevant doc link.

2002-05-08  Jesper Skov  <jskov@redhat.com>

	* src/sh_scif_serial.c: Added SH2 support. Added break interrupt
	support. Added IrDA support. Added async RX/TX support. Added
	support for platforms to add config keys and handle flow
	control. Register renaming.

	* cdl/ser_sh_scif.cdl: Added async RX/TX and IRDA support. Also
	added interface for support of break interrupts.

2002-01-30  Jesper Skov  <jskov@redhat.com>

	* src/sh_scif_serial.c (sh3_scif_tx_DSR): Stop single-character
	transmit if transmitter gets disabled. This does not change the
	(output) semantics of the code, but does prevent it from looping
	over the full size of the FIFO calling the (inactive) xmt_char
	callback.

2001-02-27  Jesper Skov  <jskov@redhat.com>

	* src/sh_scif_serial.c (sh3_scif_er_DSR): Clear break flag.

2001-02-26  Jesper Skov  <jskov@redhat.com>

	* src/sh_scif_serial.c (sh3_scif_er_DSR): Enable interrupts on
	exit. Clear ER flag.

2000-10-23  Jesper Skov  <jskov@redhat.com>

	* src/sh_scif_serial.c: Include cyg_ass.h

2000-10-12  Jesper Skov  <jskov@redhat.com>

	* src/sh_scif_serial.c (sh3_scif_set_config): Changes to the flow
	control handling. Renamed DMA variables.

2000-10-12  Jonathan Larmour  <jlarmour@redhat.com>

	* src/sh_scif_serial.c: return -EINVAL when unsupported flow control
	mode requested.

2000-10-06  Jesper Skov  <jskov@redhat.com>

	* src/sh_scif_serial.c: Change to new block call syntax.
	Clean up start_xmit code. Do block transfers in serial DSRs.

2000-10-03  Jesper Skov  <jskov@redhat.co.uk>

	* src/sh_scif_serial.c: Fixed receive FIFO problem. Added Line
	Status handling. Don't enable TX interrupts in initialization.
	* src/sh_scif_serial.c: Added DMA support. Added RTS/CTS control.